Use Java17 tolist